change to collect for mutable list